objects/gvp__Account_KPI__c.object
<CustomObject>
    <description>Used to track National Account KPIs (similar to Activity Goals) but NOT tied to any related records (objects, triggers)</description>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>National_Account_KPI_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__BTG_Mandate_Actual__c</fullName>
        <label>BTG Mandate Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BTG_Mandate_Goal__c</fullName>
        <label>BTG Mandate Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BTG_Mandates_vs_Goal__c</fullName>
        <formula>gvp__BTG_Mandate_Actual__c / gvp__BTG_Mandate_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTG Mandates vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__BTG_Optional_Actual__c</fullName>
        <label>BTG Optional Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BTG_Optional_Goal__c</fullName>
        <label>BTG Optional Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__BTG_Optional_vs_Goal__c</fullName>
        <formula>gvp__BTG_Optional_Actual__c / gvp__BTG_Optional_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTG Optional vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Cocktail_Menu_Mandate_Actual__c</fullName>
        <label>Cocktail Menu Mandate Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Cocktail_Menu_Mandate_Goal__c</fullName>
        <label>Cocktail Menu Mandate Goal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Cocktail_Menu_Mandates_vs_Goal__c</fullName>
        <formula>gvp__Cocktail_Menu_Mandate_Actual__c  / gvp__Cocktail_Menu_Mandate_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cocktail Menu Mandates vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Cocktail_Menu_Optional_Actual__c</fullName>
        <label>Cocktail Menu Optional Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Cocktail_Menu_Optional_Goal__c</fullName>
        <label>Cocktail Menu Optional Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Cocktail_Menu_Optional_vs_Goal__c</fullName>
        <formula>gvp__Cocktail_Menu_Optional_Actual__c / gvp__Cocktail_Menu_Optional_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cocktail Menu Optional vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Continuous Improvement</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Well_Mandate_Actual__c</fullName>
        <label>Well Mandate Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Well_Mandate_Goal__c</fullName>
        <label>Well Mandate Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Well_Mandates_vs_Goal__c</fullName>
        <label>Well Mandates vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Well_Optional_Actual__c</fullName>
        <label>Well Optional Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Well_Optional_Goal__c</fullName>
        <label>Well Optional Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Well_Optional_vs_Goal__c</fullName>
        <formula>gvp__Well_Optional_Actual__c / gvp__Well_Optional_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Optional vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Wine_List_Mandate_Actual__c</fullName>
        <label>Wine List Mandate Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Wine_List_Mandate_Goal__c</fullName>
        <label>Wine List Mandate Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Wine_List_Mandate_vs_Goal__c</fullName>
        <formula>gvp__Wine_List_Mandate_Actual__c / gvp__Wine_List_Mandate_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wine List Mandate vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>gvp__Wine_List_Optional_Actual__c</fullName>
        <label>Wine List Optional Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Wine_List_Optional_Goal__c</fullName>
        <label>Wine List Optional Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Wine_List_Optional_vs_Goal__c</fullName>
        <formula>gvp__Wine_List_Optional_Actual__c / gvp__Wine_List_Optional_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wine List Optional vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Account KPI</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account KPI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>